webui/src/scss/_button-edit.scss
.edit-button-panel {
	margin-right: -0.5rem;
	h4 {
		margin-top: 1rem;
	}

	svg {
		font-size: 1rem;
	}
}

.flex-form {
	& > div:not(.btn-group) {
		// column
		margin-bottom: 10px;
	}

	label {
		justify-content: left;
		font-weight: bold;
		font-size: 0.85em;
		margin-bottom: 0.15rem;
	}

	.png-browse {
		display: block;
		white-space: nowrap;
	}
}

.flex-form-row {
	margin: 0;
}

table.action-table td,
table.variables-table td,
table.feedback-table td {
	border-bottom: 10px solid #f0f0f0;
	border-top: 10px solid #f0f0f0;
}

table.action-table,
table.variables-table,
table.feedback-table {
	.actionlist-dragging,
	.feedbacklist-dragging {
		opacity: 0.5;
	}

	.actionlist-dropzone {
		p {
			border: 2px dashed #bbb;
			border-radius: 5px;
			text-align: center;
			margin: 0;
			padding: 0.75rem;
		}
	}

	td.td-reorder {
		padding-right: 0;
		vertical-align: middle;
	}
	.editor-grid-events {
		margin-right: -0.75rem;
	}
	.editor-grid {
		display: grid;
		grid-template-columns: 0.7fr auto 1fr;
		grid-template-rows: auto auto auto 1fr;
		column-gap: 10px;

		.cell-name {
			font-weight: bold;
			grid-row: 1;
			grid-column: 1 / 3;
		}

		.cell-controls {
			grid-row: 1;
			grid-column: 3;
			text-align: right;
		}

		.cell-description {
			grid-row: 2;
			grid-column: 1;
		}

		.cell-bank-preview {
			grid-row: 2 / 5;
			grid-column: 2;

			.bank {
				padding: 0;
			}
		}

		.cell-delay,
		.cell-invert {
			grid-row: 3;
			grid-column: 1;

			// @include media-breakpoint-up('sm') {
			// 	width: 70%;
			// }

			margin-top: 0.5rem;
		}

		.cell-actions {
			grid-row: 4;
			grid-column: 1;
		}

		.cell-option {
			grid-row: 2 / 5;
			grid-column: 3;
		}

		.cell-styles {
			grid-row: 5;
			grid-column: 3;

			.png-browse {
				display: block;
			}
		}
		.cell-styles-manage {
			grid-row: 5;
			grid-column: 1 / 3;
		}
	}

	// Give a border the bottom of the table. based on the table.td rule from coreui
	tbody {
		border-bottom: $table-border-width solid;

		@include themes($table-theme-map, $create: parent) {
			border-bottom-color: themes-get-value('table-border-color');
		}
	}
}

.add-dropdown-wrapper {
	display: grid;
	grid-auto-flow: column;
	grid-template-columns: 1fr auto;
}

.add-browse-card {
	.card-header {
		cursor: pointer;
		font-weight: bold;
		// background-color: #ccc;

		&:hover {
			text-decoration: underline;
		}
	}

	.card-body {
		padding: 0;
	}

	.table {
		margin-bottom: 0;

		td {
			vertical-align: middle;
		}

		.item-label {
			font-weight: bold;
		}
	}

	p.no-entries {
		padding: 0.75rem;
		margin: 0;
	}
}

